--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -10,6 +10,8 @@
 	background: url('/images/blue_background.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+    height: 100%;
+    min-height: 100%;
 }
 
 .transition {
