--- a/public/css/app.css
+++ b/public/css/app.css
@@ -764,6 +764,11 @@ img {
   margin-bottom: 1.5rem;
 }
 
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -1162,6 +1167,10 @@ button { outline: none;
 
   .md\:mb-0{
     margin-bottom: 0;
+  }
+
+  .md\:mt-8{
+    margin-top: 2rem;
   }
 
   .md\:mt-16{
